
static_library("common") {
  sources = [
    "common/skysphere.cc",
    "common/loadobj.cc",
    "common/grid.cc",
    "common/heightmap.cc",
    "common/normal_render.cc",
    "common/md5loader.cc",
    "common/md5loader.h",
    "common/util.cc",
    "common/billboard.cc",
    "common/billboard.h",
    "common/aabb.cc",
    "common/aabb.h",
    "common/raymesh.cc",
  ]
  deps = [
    "//azer:azer",
    "//azer/render_system/d3d11:d3d11_render_system",
    "//base:base",
    "//base:appinit",
  ]
  configs += ["//build/config/win:d3d11"]
}

executable("azer_sbox_init") {
  sources = ["init/main.cc"]
  deps = [
    "//azer/render:render",
    ":common",
  ]
}

executable("azer_sbox_triangle") {
  sources = ["triangle/main.cc"]
  deps = [
    "//azer/render:render",
    ":common",
  ]
}

executable("azer_sbox_colored") {
  sources = ["colored/main.cc"]
  deps = [
    "//azer/render:render",
    "//base:base",
    ":common",
  ]
}

executable("azer_sbox_indices") {
  sources = ["indices/main.cc"]
  deps = [
    "//azer/render:render",
    ":common",
  ]
}

executable("azer_sbox_wvp") {
  sources = ["wvp/main.cc"]
  deps = [
    "//azer/render:render",
    "//azer/render_system/d3d11:d3d11_render_system",
    ":common",
  ]
  configs += ["//build/config/win:d3d11"]
}

executable("azer_sbox_transform") {
  sources = ["transform/main.cc"]
  deps = [
    "//azer/render:render",
    "//azer/render_system/d3d11:d3d11_render_system",
    "//base:base",
    ":common",
  ]
  configs += ["//build/config/win:d3d11"]
}

executable("azer_sbox_renderstate") {
  sources = ["renderstate/main.cc"]
  deps = [
    "//azer/render:render",
    "//azer/render_system/d3d11:d3d11_render_system",
    ":common",
  ]
  configs += ["//build/config/win:d3d11"]
}

executable("azer_sbox_texture") {
  sources = ["texture/main.cc"]
  deps = [
    "//azer/render:render",
    "//azer/render_system/d3d11:d3d11_render_system",
    "//base:base",
    ":common",
  ]
  configs += ["//build/config/win:d3d11"]
}

executable("azer_sbox_blending") {
  sources = ["blending/main.cc"]
  deps = [
    "//azer/render:render",
    "//azer/render_system/d3d11:d3d11_render_system",
    ":common",
  ]
  configs += ["//build/config/win:d3d11"]
}

executable("azer_sbox_pixelclip") {
  sources = ["pixelclip/main.cc"]
  deps = [
    "//azer/render:render",
    "//azer/render_system/d3d11:d3d11_render_system",
    ":common",
  ]
  configs += ["//build/config/win:d3d11"]
}

executable("azer_sbox_simplelight") {
  sources = [
    "simplelight/main.cc",
    "simplelight/data.cc",
  ]
  deps = [
    "//azer/render:render",
    "//azer/render_system/d3d11:d3d11_render_system",
    "//base:base",
    ":common",
  ]
  configs += ["//build/config/win:d3d11"]
}

executable("azer_sbox_simplelight2") {
  sources = [ "simplelight2/main.cc"]
  deps = [
    "//azer/render:render",
    "//azer/render_system/d3d11:d3d11_render_system",
    "//base:base",
    ":common",
  ]
  configs += ["//build/config/win:d3d11"]
}

executable("azer_sbox_fpcamera") {
  sources = [
    "fpcamera/delegate.cc", "fpcamera/main.cc",
  ]
  deps = [
    "//azer/render:render",
    "//azer/render_system/d3d11:d3d11_render_system",
    ":common",
  ]
  configs += ["//build/config/win:d3d11"]
}

executable("azer_sbox_spotlight") {
  sources = [
    "spotlight/delegate.cc","spotlight/main.cc",
  ]
  deps = [
    "//azer/render:render",
    "//azer/render_system/d3d11:d3d11_render_system",
    ":common",
  ]
  configs += ["//build/config/win:d3d11"]
}

executable("azer_sbox_skybox") {
  sources = [
    "skybox/delegate.cc",
    "skybox/main.cc",
  ]
  deps = [
    "//azer/render:render",
    "//azer/render_system/d3d11:d3d11_render_system",
    ":common",
  ]
  configs += ["//build/config/win:d3d11"]
}

executable("azer_sbox_loadobj") {
  sources = ["loadobj/main.cc"]
  deps = [
    "//azer/render:render",
    "//azer/render_system/d3d11:d3d11_render_system",
    ":common",
  ]
  configs += ["//build/config/win:d3d11"]
}
  
executable("azer_sbox_objmodel") {
  sources = [ "objmodel/main.cc" , "objmodel/mesh.cc"]
  deps = [
    "//azer/render:render",
    "//azer/render_system/d3d11:d3d11_render_system",
    "//third_party/assimp:assimp",
    ":common",
  ]
  configs += ["//build/config/win:d3d11"]
}

executable("azer_sbox_bumpmap") {
  sources = ["bumpmap/main.cc" ]
  deps = [
    "//azer/render:render",
    "//azer/math:math",
    "//azer/render_system/d3d11:d3d11_render_system",
    ":common",
  ]
  configs += ["//build/config/win:d3d11"]
}

executable("azer_sbox_picking") {
  sources = ["picking/main.cc"]
  deps = [
    "//azer/render:render",
    "//azer/math:math",
    "//azer/render_system/d3d11:d3d11_render_system",
    ":common",
  ]
  configs += ["//build/config/win:d3d11"]
}

executable("azer_sbox_md5") {
  sources = ["md5/main.cc"]
  deps = [
    "//azer/render:render",
    "//azer/math:math",
    "//azer/render_system/d3d11:d3d11_render_system",
    ":common",
  ]
  configs += ["//build/config/win:d3d11"]
}

executable("azer_sbox_heightmaps") {
  sources = [
    "heightmaps/delegate.cc",
    "heightmaps/main.cc",
  ]
  deps = [
    "//azer/render:render",
    "//azer/render_system/d3d11:d3d11_render_system",
    ":common",
  ]
}

executable("azer_sbox_rendertarget") {
  sources = [
    "rendertarget/delegate.cc",
    "rendertarget/main.cc",
  ]
  deps = [
    "//azer/render:render",
    "//azer/render_system/d3d11:d3d11_render_system",
    ":common",
  ]
}

executable("azer_sbox_instance") {
  sources = ["instance/main.cc", "instance/tree_mesh.cc"]
  deps = [
    "//azer/render:render",
    "//azer/render_system/d3d11:d3d11_render_system",
    ":common",
  ]
  configs += ["//build/config/win:d3d11"]
}

executable("azer_sbox_billboard") {
  sources = ["billboard/main.cc"]
  deps = [
    "//azer/render:render",
    "//azer/render_system/d3d11:d3d11_render_system",
    ":common",
  ]
  configs += ["//build/config/win:d3d11"]
}

executable("azer_sbox_xna") {
  sources = ["xna/main.cc"]
  deps = [
    "//azer/render:render",
    "//azer/math:math",
    ":common",
  ]
  configs += ["//build/config/win:d3d11"]
}

executable("azer_sbox_skia") {
  sources = [
    "skia/delegate.cc",
    "skia/main.cc",
  ]
  deps = [
    "//azer/render:render",
    "//azer/render_system/d3d11:d3d11_render_system",
    ":common",
  ]
  configs += ["//build/config/win:d3d11"]
}

group("azer_sbox") {
  deps = [
    ":azer_sbox_init",
    ":azer_sbox_triangle",
    ":azer_sbox_colored",
    ":azer_sbox_indices",
    ":azer_sbox_wvp",
    ":azer_sbox_transform",
    ":azer_sbox_renderstate",
    ":azer_sbox_texture",
    ":azer_sbox_blending",
    ":azer_sbox_pixelclip",
    ":azer_sbox_simplelight",
    ":azer_sbox_simplelight2",
    ":azer_sbox_fpcamera",
    ":azer_sbox_spotlight",
    ":azer_sbox_skybox",
    ":azer_sbox_loadobj",
    ":azer_sbox_objmodel",
    ":azer_sbox_bumpmap",
    ":azer_sbox_picking",
    ":azer_sbox_md5",
    ":azer_sbox_heightmaps",
    ":azer_sbox_rendertarget",
    ":azer_sbox_instance",
    ":azer_sbox_billboard",
    ":azer_sbox_xna",
  ]
}