
group("rastertek_d3d11") {
  deps = [
    "d3d11/texture:rastertek_d3d11_texture"
    "d3d11/model:rastertek_d3d11_model"
    "d3d11/ambient:rastertek_d3d11_ambient"
    "d3d11/specularlight:rastertek_d3d11_specularlight"
    "d3d11/culling:rastertek_d3d11_culling"
    "d3d11/multitex:rastertek_d3d11_multitex"
    "d3d11/lightmap:rastertek_d3d11_lightmap"
    "d3d11/alphamap:rastertek_d3d11_alphamap"
    "d3d11/bumpmap:rastertek_d3d11_bumpmap"
    "d3d11/specularmap:rastertek_d3d11_specularmap"
    "d3d11/transparency:rastertek_d3d11_transparency"
    "d3d11/instancing:rastertek_d3d11_instancing"
    "d3d11/reflection:rastertek_d3d11_reflection"
    "d3d11/depthbuffer:rastertek_d3d11_depthbuffer"
    "d3d11/multipointlights:rastertek_d3d11_multipointlights"
    "d3d11/water:rastertek_d3d11_water"
    "d3d11/ice:rastertek_d3d11_ice"
    "d3d11/fire:rastertek_d3d11_fire"
    "d3d11/shadow_map:rastertek_d3d11_shadow_map"
    "d3d11/multilight_shadow_map:rastertek_d3d11_multilight_shadow_map"
    "d3d11/soft_shadow:rastertek_d3d11_soft_shadow"
    "d3d11/blur:rastertek_d3d11_blur"
    "d3d11/projectivetex:rastertek_d3d11_projectivetex"
    "d3d11/projected_lightmap:rastertek_d3d11_projected_lightmap"
    "d3d11/shadowmap_with_transparency:rastertek_d3d11_shadowmap_with_transparency"
    "d3d11/deferred_shadering:rastertek_d3d11_deferred_shadering"
    "d3d11/mesh:rastertek_mesh_trans"
    "terrain/common:rastertek_terrain_common"
    "terrain/heightmap:rastertek_terrain_heightmap"
  ]
}

executable("rastertek_d3d11_triangle") {
  sources = ["d3d11/triangle/main.cc"]
  deps = ["//azer:azer" "//base:base" "//base:appinit"]
}