
shared_library("gfx") {
  sources = [
    "animation/animation.cc",
    "animation/animation.h",
    "animation/animation_container.cc",
    "animation/animation_container.h",
    "animation/animation_container_element.h",
    "animation/animation_container_observer.h",
    "animation/animation_delegate.h",
    "animation/linear_animation.cc",
    "animation/linear_animation.h",
    "animation/multi_animation.cc",
    "animation/multi_animation.h",
    "animation/slide_animation.cc",
    "animation/slide_animation.h",
    "animation/test_animation_delegate.h",
    "animation/throb_animation.cc",
    "animation/throb_animation.h",
    "animation/tween.cc",
    "animation/tween.h",
    "blit.cc",
    "blit.h",
    "box_f.h",
    "break_list.h",
    "canvas.cc",
    "canvas.h",
    "canvas_android.cc",
    "canvas_paint.h",
    "canvas_paint_gtk.cc",
    "canvas_paint_gtk.h",
    "canvas_paint_mac.h",
    "canvas_paint_mac.mm",
    "canvas_paint_win.cc",
    "canvas_paint_win.h",
    "canvas_skia.cc",
    "canvas_skia_paint.h",
    "codec/jpeg_codec.cc",
    "codec/jpeg_codec.h",
    #"codec/png_codec.cc",
    "codec/png_codec.h",
    "color_analysis.cc",
    "color_analysis.h",
    "color_profile.cc",
    "color_profile.h",
    "color_profile_mac.cc",
    "color_profile_win.cc",
    "color_utils.cc",
    "color_utils.h",
    "display.cc",
    "display.h",
    "display_observer.cc",
    "display_observer.h",
    "display_unittest.cc",
    "favicon_size.cc",
    "favicon_size.h",
    "font.cc",
    "font.h",
    "font_fallback_win.cc",
    "font_fallback_win.h",
    "font_list.cc",
    "font_list.h",
    "font_render_params_android.cc",
    "font_render_params_linux.cc",
    "font_render_params_linux.h",
    "font_smoothing_win.cc",
    "font_smoothing_win.h",
    "font_unittest.cc",
    "frame_time.h",
    "gdi_util.cc",
    "gdi_util.h",
    "gdk_compat.h",
    "geometry/box_f.cc",
    "geometry/box_f.h",
    "geometry/insets.cc",
    "geometry/insets.h",
    "geometry/insets_base.h",
    "geometry/insets_f.cc",
    "geometry/insets_f.h",
    "geometry/matrix3_f.cc",
    "geometry/matrix3_f.h",
    "geometry/point.cc",
    "geometry/point.h",
    "geometry/point3_f.cc",
    "geometry/point3_f.h",
    "geometry/point_base.h",
    "geometry/point_conversions.cc",
    "geometry/point_conversions.h",
    "geometry/point_f.cc",
    "geometry/point_f.h",
    "geometry/quad_f.cc",
    "geometry/quad_f.h",
    "geometry/rect.cc",
    "geometry/rect.h",
    "geometry/rect_base.h",
    "geometry/rect_base_impl.h",
    "geometry/rect_conversions.cc",
    "geometry/rect_conversions.h",
    "geometry/rect_f.cc",
    "geometry/rect_f.h",
    "geometry/safe_integer_conversions.h",
    "geometry/safe_integer_conversions_unittest.cc",
    "geometry/size.cc",
    "geometry/size.h",
    "geometry/size_base.h",
    "geometry/size_conversions.cc",
    "geometry/size_conversions.h",
    "geometry/size_f.cc",
    "geometry/size_f.h",
    "geometry/vector2d.cc",
    "geometry/vector2d.h",
    "geometry/vector2d_conversions.cc",
    "geometry/vector2d_conversions.h",
    "geometry/vector2d_f.cc",
    "geometry/vector2d_f.h",
    "geometry/vector3d_f.cc",
    "geometry/vector3d_f.h",
    "gfx_export.h",
    "gfx_paths.cc",
    "gfx_paths.h",
    "gpu_memory_buffer.cc",
    "gpu_memory_buffer.h",
    "icon_util.cc",
    "icon_util.h",
    "image/cairo_cached_surface.cc",
    "image/cairo_cached_surface.h",
    "image/canvas_image_source.cc",
    "image/canvas_image_source.h",
    "image/image.cc",
    "image/image.h",
    "image/image_family.cc",
    "image/image_family.h",
    "image/image_ios.mm",
    "image/image_mac.mm",
    "image/image_png_rep.cc",
    "image/image_png_rep.h",
    "image/image_skia.cc",
    "image/image_skia.h",
    "image/image_skia_operations.cc",
    "image/image_skia_operations.h",
    "image/image_skia_rep.cc",
    "image/image_skia_rep.h",
    "image/image_skia_source.h",
    "image/image_skia_util_ios.h",
    "image/image_skia_util_ios.mm",
    "image/image_skia_util_mac.h",
    "image/image_skia_util_mac.mm",
    "image/image_util.cc",
    "image/image_util.h",
    "image/image_util_ios.mm",
    "insets.h",
    "insets_f.h",
    "interpolated_transform.cc",
    "interpolated_transform.h",
    "native_widget_types.h",
    "path.cc",
    "path.h",
    #"path_aura.cc",
    #"path_gtk.cc",
    "path_win.cc",
    "path_win.h",
    #"path_x11.cc",
    #"path_x11.h",
    "platform_font.h",
    "platform_font_android.cc",
    "platform_font_ios.h",
    "platform_font_ios.mm",
    "platform_font_mac.h",
    "platform_font_mac.mm",
    "platform_font_ozone.cc",
    "platform_font_pango.cc",
    "platform_font_pango.h",
    "platform_font_win.cc",
    "platform_font_win.h",
    "point.h",
    "point3_f.h",
    "point_conversions.h",
    "point_f.h",
    "quad_f.h",
    "range/range.cc",
    "range/range.h",
    "range/range_mac.mm",
    "range/range_win.cc",
    "rect.h",
    "rect_conversions.h",
    "rect_f.h",
    "render_text.cc",
    "render_text.h",
    "render_text_mac.cc",
    "render_text_mac.h",
    "render_text_win.cc",
    "render_text_win.h",
    "safe_integer_conversions.h",
    "scoped_canvas.h",
    "scoped_cg_context_save_gstate_mac.h",
    "scoped_gobject.h",
    "scoped_ns_graphics_context_save_gstate_mac.h",
    "scoped_ns_graphics_context_save_gstate_mac.mm",
    "scoped_sk_region.h",
    "scoped_ui_graphics_push_context_ios.h",
    "scoped_ui_graphics_push_context_ios.mm",
    "screen.cc",
    "screen.h",
    "screen_android.cc",
#   "screen_aura.cc",
    "screen_gtk.cc",
    "screen_ios.mm",
    "screen_mac.mm",
    "screen_type_delegate.h",
    "screen_win.cc",
    "screen_win.h",
    "sequential_id_generator.cc",
    "sequential_id_generator.h",
    "shadow_value.cc",
    "shadow_value.h",
    "size.h",
    "size_conversions.h",
    "size_f.h",
    "skbitmap_operations.cc",
    "skbitmap_operations.h",
    "scrollbar_size.cc",
    "scrollbar_size.h",
    "selection_model.cc",
    "selection_model.h",
    "skia_util.cc",
    "skia_util.h",
    "switches.cc",
    "switches.h",
    "sys_color_change_listener.cc",
    "sys_color_change_listener.h",
    "text_constants.h",
    "text_elider.cc",
    "text_elider.h",
    "text_utils.cc",
    "text_utils.h",
    "text_utils_android.cc",
    "text_utils_ios.mm",
    "text_utils_skia.cc",
    "transform.cc",
    "transform.h",
    "transform_util.cc",
    "transform_util.h",
    "ui_gfx_exports.cc",
    "utf16_indexing.cc",
    "utf16_indexing.h",
    "utf16_indexing_unittest.cc",
    "vector2d.h",
    "vector2d_conversions.h",
    "vector2d_f.h",
    "vector3d_f.h",
    "vsync_provider.h",
    "win/dpi.cc",
    "win/dpi.h",
    "win/hwnd_util.cc",
    "win/hwnd_util.h",
    "win/scoped_set_map_mode.h",
    "win/singleton_hwnd.cc",
    "win/singleton_hwnd.h",
    "win/window_impl.cc",
    "win/window_impl.h",
  ]

  if (is_win) {
    sources -= [
      "screen_gtk.cc",
      "canvas_paint_gtk.cc",
      "canvas_paint_gtk.h",
      "image/cairo_cached_surface.cc",
      "platform_font_ozone.cc",
      "platform_font_pango.cc",
      "platform_font_pango.h",
    ]
  }

  deps = [
    "//base:base",
    "//base:base_i18n",
    "//testing:gtest",
    "//third_party/skia/gn:skia",
    "//third_party/icu:icui18n",
    "//third_party/icu:icuuc",
    "//third_party/libpng:libpng",
    "//third_party/wtl:wtl",
    "//third_party/zlib:zlib",
    "//skia:skia_ext",
  ]

  defines = ["GFX_IMPLEMENTATION"]
}


test("gfx_unittest") {
  sources = [
    "animation/animation_container_unittest.cc",
    "animation/animation_unittest.cc",
    "animation/multi_animation_unittest.cc",
    "animation/slide_animation_unittest.cc",
    "animation/tween_unittest.cc",
    "codec/jpeg_codec_unittest.cc",
#    "codec/png_codec_unittest.cc",
#    "color_analysis_unittest.cc",
    "color_utils_unittest.cc",
    "font_fallback_win_unittest.cc",
    "font_list_unittest.cc",
    "geometry/box_unittest.cc",
    "geometry/quad_unittest.cc",
    "geometry/rect_unittest.cc",
    "geometry/size_unittest.cc",
    "geometry/insets_unittest.cc",
    "geometry/matrix3_unittest.cc",
    "geometry/point3_unittest.cc",
    "geometry/point_unittest.cc",
    "geometry/vector2d_unittest.cc",
    "geometry/vector3d_unittest.cc",
    #"icon_util_unittest.cc",
    "image/image_family_unittest.cc",
    "image/image_mac_unittest.mm",
    "image/image_skia_unittest.cc",
    "image/image_unittest.cc",
    "image/image_unittest_util.cc",
    "image/image_unittest_util.h",
    "image/image_unittest_util_ios.mm",
    "image/image_unittest_util_mac.mm",
    "image/image_util_unittest.cc",
    "interpolated_transform_unittest.cc",
    "platform_font_mac_unittest.mm",
    #"platform_font_pango_unittest.cc",
    "platform_font_win_unittest.cc",
    "range/range_mac_unittest.mm",
    "range/range_unittest.cc",
    "range/range_win_unittest.cc",
    "sequential_id_generator_unittest.cc",
    "shadow_value_unittest.cc",
    "skbitmap_operations_unittest.cc",
    "skrect_conversion_unittest.cc",
    #"text_elider_unittest.cc",
    "text_utils_unittest.cc",
    "test/color_util.cc",
    "test/color_util.h",
  ]
  deps = [
    "//base:base",
    "//base:test_main",
    "//third_party/skia/gn:skia",
    "//third_party/icu:icui18n",
    "//third_party/icu:icuuc",
    ":gfx",
  ]
}