source_set("azer_angle11") {
  sources = [
    "angle/angle.cc",
    "angle/angle.h",
    "angle/skia.cc",
    "angle/skia.h",
    "angle/skia_context.cc",
    "angle/skia_context.h",
    "angle/grcontext.cc",
    "angle/grcontext.h",
  ]
  deps = [
    "//third_party/angle:libGLESv2",
    "//third_party/angle:libEGL",
    "//third_party/skia/gn:skia"
    "//azer/render:render",
  ]

  configs += [
    "//third_party/angle:angle_libGLESv2_config"
    "//build/config/win:d3d11",
  ]
  defines = ["BUILD_D3D11_AZER_RENDER_SYSTEM", "SK_ANGLE"]
}

shared_library("d3d11_render_system") {
  sources = [
    "blending.cc",
    "blending.h",
    "depth_buffer.cc",
    "depth_buffer.h",
    "enum_transform.h",
    "gpu_constants_table.cc",
    "gpu_constants_table.h",
    "gpu_program.cc",
    "gpu_program.h",
    "indices_buffer.cc",
    "indices_buffer.h",
    "hr_msg.cc",
    "hr_msg.h",
    "overlay.cc",
    "overlay.h",
    "plugin.cc",
    "plugin.h",
    "render_system.cc",
    "render_system.h",
    "render_target.cc",
    "render_target.h",
    "renderer.cc",
    "renderer.h",
    "swap_chain.cc",
    "swap_chain.h",
    "technique.cc",
    "technique.h",
    "texture.cc",
    "texture.h",
    "util.cc",
    "util.h",
    "vertex_buffer.cc",
    "vertex_buffer.h",
  ]
  deps = [
    "//base:base",
    "//azer/render:render",
    ":azer_angle11",
  ]
  defines = ["BUILD_D3D11_AZER_RENDER_SYSTEM"]
  configs += [
    "//build/config/win:d3d11",
  ]
  defpath = rebase_path("../render_system.def", ".", root_build_dir)
  if (is_win) { ldflags = ["/DEF:$defpath"]}
}