import("//build/templates/afx.gni")

afx("azer_sample_trianglestrip_effect") {
  source = "diffuse.afx"
  filename = "diffuse"
}

executable("azer_sample_trianglestrip") {
  sources = ["main.cc"]
  deps = [
    "//base:appinit",
    ":azer_sample_trianglestrip_effect",
    "//samples:samples_common",
  ]
}